syntax = "proto3";

package librarymanagement;

import "google/protobuf/wrappers.proto";

service CategoryService {
  rpc GetCategories(CategorySearchRequest) returns (CategoryListResponse);
  rpc GetCategoryTree(CategoryTreeRequest) returns (CategoryTreeListResponse);
  rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse);
  rpc DeleteCategory(CategoryDeleteRequest) returns (CategoryDeleteResponse);
}

message CategorySearchRequest {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.Int64Value parent_category_id = 3;
  google.protobuf.BoolValue is_active = 4;
}

message CategoryTreeRequest {}

message CreateCategoryRequest {
  string name = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.Int64Value parent_category_id = 3;
}

message CategoryResponse{
  int64 category_id = 1;
  string name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.Int64Value parent_category_id = 4;
  google.protobuf.StringValue parent_category_name = 5;
  int32 sort_order = 6;
  bool is_active = 7;
  int32 book_count = 8;
}

message CategoryTreeResponse {
  int64 category_id = 1;
  string name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.Int64Value parent_category_id = 4;
  google.protobuf.StringValue parent_category_name = 5;
  int32 sort_order = 6;
  bool is_active = 7;
  int32 book_count = 8;
  repeated CategoryTreeResponse sub_categories = 9;
}

message CategoryListResponse {
  repeated CategoryResponse categories = 1;
}

message CategoryTreeListResponse {
  repeated CategoryTreeResponse categories = 1;
}

message CategoryDeleteRequest {
  int64 category_id = 1;
}

message CategoryDeleteResponse {
  string message = 2;
}
